--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Redirecting...</title>
-  <meta http-equiv="refresh" content="0; URL='/viewer.html'" />
+  <meta http-equiv="refresh" content="0; url=https://us05web.zoom.us/j/86757158005?pwd=AaeJ3bteBpu6NTEtln0iUWfxSMgQfW.1" />
+  <script>
+    window.location.href = "https://us05web.zoom.us/j/86757158005?pwd=AaeJ3bteBpu6NTEtln0iUWfxSMgQfW.1";
+  </script>
+  <link rel="canonical" href="https://us05web.zoom.us/j/86757158005?pwd=AaeJ3bteBpu6NTEtln0iUWfxSMgQfW.1" />
 </head>
 <body>
-  <p>If you are not redirected automatically, <a href="/viewer.html">click here</a>.</p>
+  <p>Redirecting to prayer meeting…</p>
 </body>
 </html>
