--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0; url=https://us05web.zoom.us/j/86757158005?pwd=AaeJ3bteBpu6NTEtln0iUWfxSMgQfW.1" />
-  <script>
-    window.location.href = "https://us05web.zoom.us/j/86757158005?pwd=AaeJ3bteBpu6NTEtln0iUWfxSMgQfW.1";
-  </script>
-  <link rel="canonical" href="https://us05web.zoom.us/j/86757158005?pwd=AaeJ3bteBpu6NTEtln0iUWfxSMgQfW.1" />
+  <meta charset="UTF-8">
+  <title>Redirecting...</title>
+  <meta http-equiv="refresh" content="0; URL='/viewer.html'" />
 </head>
 <body>
-  <p>Redirecting to prayer meeting…</p>
+  <p>If you are not redirected automatically, <a href="/viewer.html">click here</a>.</p>
 </body>
 </html>
